User Defined Action Instance Concurrency Limits (#5287)
* working prototype

* consider when to turn on namespace throttling

* tests and final cleanup

* update swagger

* fix container concurrency field

* fix tests

* renaming

* update docs

* more cleanup

---------
